--- a/index.html
+++ b/index.html
@@ -89,10 +89,15 @@
                         <div class="item-body">
                             <h3>ENTERTAINMENT SYSTEM</h3>
                             <div class="desc-wrapper">
-                                <p class="item-desc">Comprehensive analysis of the entertainment ecosystem and key players beyond just music.</p>
+                                <p class="item-desc">
+                                    <strong>엔터테인먼트 시스템</strong><br><br>
+                                    K-pop 산업을 이해하기 위해서는 시대를 단순한 연도 구간이 아니라, 비즈니스 모델·미디어 환경·타깃 시장이 어떻게 바뀌었는지를 보여주는 ‘세대’ 단위로 나누어 보는 것이 중요합니다. 본 차시에서는 ‘서태지와 아이들’을 시작으로 아이돌 시스템의 정립과 발전, 팬덤 문화의 흐름과 음원 유통 및 문화 흐름을 전반적으로 학습하는데 초점을 맞추고 있습니다.<br><br>
+                                    <em style="font-size: 0.9em; color: #888;">Comprehensive analysis of the entertainment ecosystem and key players beyond just music.</em>
+                                </p>
                             </div>
                         </div>
                     </div>
+
                     <div class="timeline-item">
                         <div class="item-header">
                             <span class="curr-number">WK 02</span>
@@ -101,10 +106,15 @@
                         <div class="item-body">
                             <h3>HISTORY & TRENDS</h3>
                             <div class="desc-wrapper">
-                                <p class="item-desc">Genealogy and trend analysis from Rock, Hip-hop, R&B to K-Pop hybrid genres.</p>
+                                <p class="item-desc">
+                                    <strong>장르의 역사와 트렌드</strong><br><br>
+                                    트렌디한 장르의 갈래와 역사에 대해 학습하며 음악에 대한 이해도를 높이는 시간을 가집니다. 추상적으로만 알고 있던 힙합/R&B/EDM 등 개념을 명료화하고, 이를 실제로 곡 해석에 적용하는 토론 세션을 가집니다.<br><br>
+                                    <em style="font-size: 0.9em; color: #888;">Genealogy and trend analysis from Rock, Hip-Hop, R&B to K-POP hybrid genres.</em>
+                                </p>
                             </div>
                         </div>
                     </div>
+
                     <div class="timeline-item">
                         <div class="item-header">
                             <span class="curr-number">WK 03</span>
@@ -113,10 +123,15 @@
                         <div class="item-body">
                             <h3>BILLBOARD vs MELON</h3>
                             <div class="desc-wrapper">
-                                <p class="item-desc">Platform algorithms and chart entry strategies for both global and local markets.</p>
+                                <p class="item-desc">
+                                    <strong>글로벌 차트와 로컬 차트 분석</strong><br><br>
+                                    글로벌 시장(Billboard)과 로컬 시장(Melon)에서 소비되는 음악 스타일과 장르적 특성의 차이를 분석합니다. 숏폼 챌린지가 이끄는 바이럴 히트곡과 국내 팬덤형 스트리밍 곡의 패턴을 비교하고, 각 플랫폼의 대중이 반응하는 이지 리스닝과 퍼포먼스 중심 음악의 흥행 요인을 파악하여 타겟 시장에 맞는 음악적 접근법을 연구합니다.<br><br>
+                                    <em style="font-size: 0.9em; color: #888;">Comparative analysis of trending genres and music consumption patterns in global (Billboard) vs local (Melon) markets.</em>
+                                </p>
                             </div>
                         </div>
                     </div>
+
                     <div class="timeline-item">
                         <div class="item-header">
                             <span class="curr-number">WK 04</span>
@@ -125,10 +140,15 @@
                         <div class="item-body">
                             <h3>DAW PRACTICE</h3>
                             <div class="desc-wrapper">
-                                <p class="item-desc">MIDI basics (Cubase) and technical communication skills for working with songwriters.</p>
+                                <p class="item-desc">
+                                    <strong>DAW 실습 및 작법 이해</strong><br><br>
+                                    실용음악 부서가 아니어도 음악이 만들어지는 과정을 안다면 훨씬 의사소통에 능통한 인재로 거듭날 수 있습니다. Cubase와 Splice, SUNO를 활용해 트랙이 만들어지는 과정을 직접 보고 실습하는 시간을 가집니다.<br><br>
+                                    <em style="font-size: 0.9em; color: #888;">MIDI basics (Cubase) and technical communication skills for working with songwriters.</em>
+                                </p>
                             </div>
                         </div>
                     </div>
+
                     <div class="timeline-item">
                         <div class="item-header">
                             <span class="curr-number">WK 05</span>
@@ -137,10 +157,15 @@
                         <div class="item-body">
                             <h3>ESSENCE OF A&R</h3>
                             <div class="desc-wrapper">
-                                <p class="item-desc">Logic of music selection (Song Camp) and vocal directing fitting the artist's identity.</p>
+                                <p class="item-desc">
+                                    <strong>A&R 실무의 핵심</strong><br><br>
+                                    A&R의 핵심 역할은 아티스트의 정체성과 현시점의 트렌드에 부합하는 최적의 곡을 찾아내는 것입니다. 작곡가들에게 곡을 의뢰하는 ‘리드 시트’ 작성법부터, 수집된 데모곡을 선별하는 기준, 그리고 녹음실에서 결과물의 완성도를 높이는 보컬 디렉팅의 구체적인 방법론을 학습합니다.<br><br>
+                                    <em style="font-size: 0.9em; color: #888;">Practical study of song selection logic (Song Camp), Lead sheet writing, and vocal directing fitting the artist’s identity.</em>
+                                </p>
                             </div>
                         </div>
                     </div>
+
                     <div class="timeline-item">
                         <div class="item-header">
                             <span class="curr-number">WK 06</span>
@@ -149,10 +174,15 @@
                         <div class="item-body">
                             <h3>VISUAL DIRECTING</h3>
                             <div class="desc-wrapper">
-                                <p class="item-desc">Establishing visual consistency strategies including mise-en-scène and fashion direction.</p>
+                                <p class="item-desc">
+                                    <strong>비주얼 디렉팅 전략</strong><br><br>
+                                    음악의 컨셉을 시각적으로 완성하는 비주얼 디렉팅의 종합적인 전략을 탐구합니다. 앨범 커버와 뮤직비디오의 톤앤매너 설정뿐만 아니라, 아티스트의 정체성을 극대화하는 패션 및 스타일링 전략을 수립합니다. 또한 숏츠, 릴스 등 숏폼 미디어 환경에 최적화된 비주얼 콘텐츠 기획까지, 아티스트를 둘러싼 다양한 시각 요소의 통일성 구축 방법을 연구합니다.<br><br>
+                                    <em style="font-size: 0.9em; color: #888;">Establishing visual consistency strategies including mise-en-scene and fashion direction.</em>
+                                </p>
                             </div>
                         </div>
                     </div>
+
                     <div class="timeline-item">
                         <div class="item-header">
                             <span class="curr-number">WK 07</span>
@@ -161,10 +191,15 @@
                         <div class="item-body">
                             <h3>BUSINESS ANALYSIS</h3>
                             <div class="desc-wrapper">
-                                <p class="item-desc">Analysis of public disclosures (HYBE, CJ ENM) and designing new business models.</p>
+                                <p class="item-desc">
+                                    <strong>엔터 비즈니스 분석</strong><br><br>
+                                    HYBE, CJ ENM 등 주요 엔터테인먼트 기업의 전자공시(DART) 자료를 통해 매출 구조와 투자 흐름을 분석합니다. 음반, 공연, MD, 플랫폼 등 다양한 수익원을 파악하고, 이를 바탕으로 지속 가능한 신규 비즈니스 모델(BM)을 기획하여 실제 수익성을 검토해 봅니다.<br><br>
+                                    <em style="font-size: 0.9em; color: #888;">Analysis of public disclosures (HYBE, CJ ENM) and designing new business models.</em>
+                                </p>
                             </div>
                         </div>
                     </div>
+
                     <div class="timeline-item">
                         <div class="item-header">
                             <span class="curr-number">WK 08</span>
@@ -173,10 +208,15 @@
                         <div class="item-body">
                             <h3>LAW & COPYRIGHT</h3>
                             <div class="desc-wrapper">
-                                <p class="item-desc">Study of standard contracts, settlement systems, and major copyright dispute cases.</p>
+                                <p class="item-desc">
+                                    <strong>엔터 법률과 저작권</strong><br><br>
+                                    엔터테인먼트 실무에서 필수적인 법적 지식을 다룹니다. 표준전속계약서의 주요 조항과 수익 분배(R/S) 구조를 이해하고, 저작권료 징수 규정 및 표절/샘플링 이슈 등 실제 발생했던 분쟁 사례를 통해 리스크 매니지먼트 능력을 키웁니다.<br><br>
+                                    <em style="font-size: 0.9em; color: #888;">Study of standard contracts, settlement systems, and major copyright dispute cases.</em>
+                                </p>
                             </div>
                         </div>
                     </div>
+
                     <div class="timeline-item">
                         <div class="item-header">
                             <span class="curr-number">WK 09</span>
@@ -185,10 +225,15 @@
                         <div class="item-body">
                             <h3>LOGIC & VISUALIZING</h3>
                             <div class="desc-wrapper">
-                                <p class="item-desc">Data visualization and logical reporting techniques to enhance proposal persuasion.</p>
+                                <p class="item-desc">
+                                    <strong>설득의 논리와 시각화</strong><br><br>
+                                    훌륭한 기획도 상대방(투자자, 경영진, 프로듀서)의 마음을 움직여야 합니다. 청중을 설득하기 위해 논리적 근거를 배치하고, 감성을 자극하는 스토리텔링을 더하는 '설득의 구조'를 배웁니다. 텍스트 위주의 제안서를 직관적인 도식과 데이터 시각화로 변환하여, '거절할 수 없는 제안서'를 완성하는 실전 PPT 제작 기술을 배웁니다.<br><br>
+                                    <em style="font-size: 0.9em; color: #888;">Data Visualization and logical reporting techniques to enhance proposal persuasion.</em>
+                                </p>
                             </div>
                         </div>
                     </div>
+
                     <div class="timeline-item">
                         <div class="item-header">
                             <span class="curr-number">WK 10</span>
@@ -197,7 +242,11 @@
                         <div class="item-body">
                             <h3>PORTFOLIO DAY</h3>
                             <div class="desc-wrapper">
-                                <p class="item-desc">Final presentation archiving one semester's achievements into an application format.</p>
+                                <p class="item-desc">
+                                    <strong>최종 발표 및 포트폴리오</strong><br><br>
+                                    최종 PPT로서 본인이 한 학기 동안 이뤄낸 성과물과 포트폴리오에 대해 요약 발표하는 시간을 가지며 한 학기 세션을 마무리합니다.<br><br>
+                                    <em style="font-size: 0.9em; color: #888;">Final presentation archiving one semester’s achievements into an application format.</em>
+                                </p>
                             </div>
                         </div>
                     </div>
