--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>KRAFT 2026-1 | RECRUITING CLOSED</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
@@ -54,7 +54,7 @@
                 <span>우리는 곧 더 넓은 무대에서 만날 것입니다.</span>
             </p>
             <div class="sns-links">
-                <a href="https://www.instagram.com/kraftent.official/" target="_blank">INSTAGRAM</a>
+                <a href="https://www.instagram.com/kraftent.official/" target="_blank" rel="noopener noreferrer">INSTAGRAM</a>
                 <span class="dot"></span>
                 <a href="mailto:kraftent2025@gmail.com">CONTACT</a>
             </div>
